discussion/kv_engine/156529/156529_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

Test clang-tidy

Change-Id: If42bca909b0e7207213dbefd76fa09def27ab931

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-09-20 08:35:48.000000000
Message: 
Patch Set 6: Patch Set 5 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-20 08:55:57.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12580/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include <spdlog/logger.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12580/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12580/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34143/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40108/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11371/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14196/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14954/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13338/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2223/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14446/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22456/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2252/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
